Fix ktlint