@@ -1,1 +1,2 @@
 -Dorg.slf4j.simpleLogger.defaultLogLevel=INFO
+--add-opens java.base/java.lang=ALL-UNNAMED
